Alignment fix in forecast table

--- a/src/SearchBar/ForeCastListItem.css
+++ b/src/SearchBar/ForeCastListItem.css
@@ -42,6 +42,7 @@
 	flex-direction: column;
 	font-family: Helvetica;
 	font-size: .85rem;
+	width: 46px;
 }
 
 #current-icon-daily{
